--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "mysql2": "^3.6.0",
     "next": "13.4.12",
     "next-auth": "^4.22.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "swr": "^2.2.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "prisma": "^5.1.1"
   }
 }
