--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 DATABASE_URL= mysql://root:@localhost:3306/habits
 BASE_URL= http://localhost:3000
+
+GOOGLE_CLIENT_ID=1054458601714-en3d7itc11qrra7a0tlomjch3bjs7ni1.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+NEXTAUTH_SECRET=WROvjmj3K95LCKNutyFdJwvSIxtZC2BcuRLRMhjFWhM
