--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
     "mysql2": "^3.6.0",
     "next": "13.4.12",
-    "next-auth": "^4.22.4",
+    "next-auth": "^4.23.0",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "swr": "^2.2.1",
