--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
-DATABASE_URL= mysql://root:@localhost:3306/habits
-BASE_URL= http://localhost:3000
+POSTGRES_URL="postgres://default:VfRhO7TGb6YH@ep-curly-haze-25253254-pooler.eu-central-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:VfRhO7TGb6YH@ep-curly-haze-25253254-pooler.eu-central-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:VfRhO7TGb6YH@ep-curly-haze-25253254.eu-central-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-curly-haze-25253254-pooler.eu-central-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="VfRhO7TGb6YH"
+POSTGRES_DATABASE="verceldb"
+
+DATABASE_URL= postgres://default:VfRhO7TGb6YH@ep-curly-haze-25253254.eu-central-1.postgres.vercel-storage.com:5432/verceldb
+BASE_URL= https://habit-manager.vercel.app
 
 GOOGLE_CLIENT_ID=1054458601714-en3d7itc11qrra7a0tlomjch3bjs7ni1.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
