--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GOOGLE_CLIENT_ID=1054458601714-en3d7itc11qrra7a0tlomjch3bjs7ni1.apps.googleuserc
 GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET=WROvjmj3K95LCKNutyFdJwvSIxtZC2BcuRLRMhjFWhM
+
+NODE_ENV=development
