--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "swr": "^2.2.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.6",
     "prisma": "^5.1.1"
   }
 }
