--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
     "mysql2": "^3.6.0",
